controllers/user/config/broker/namespace.yaml
# Copyright 2026 labring.
apiVersion: v1
kind: Namespace
metadata:
  name: internal-credential-broker
