controllers/user/config/broker/user-system-namespace.yaml
# Copyright 2026 labring.
apiVersion: v1
kind: Namespace
metadata:
  name: internal-user-system
