controllers/user/config/broker/service.yaml
# Copyright 2026 labring.
apiVersion: v1
kind: Service
metadata:
  name: internal-credential-broker
  namespace: internal-credential-broker
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 443
    targetPort: https
  selector:
    app.kubernetes.io/name: internal-credential-broker
